# topictrends

./: .gitignore  API.md  Cargo.toml  Makefile  OPERATIONS.md  README.md  TODO.md
queries/: article-category.sql  articles.sql  categories.sql  category-graph.sql  get_id_by_title.sql  get_qid_by_title.sql  get_title_by_qid.sql  get_titles_by_qids.sql
services/embedding/: Dockerfile  Makefile  docker-compose.yaml  embedding-service.service  embedding_client.py  embedding_pb2.py  embedding_pb2_grpc.py  embedding_server.py  pyproject.toml
src/: article_category.rs  articles.rs  categories.rs  categorygraph.rs  graphbuilder.rs  main.rs  pageviews.rs  wikigraph.rs
src/scripts/: article_category.rs  articles.rs  categories.rs  categorygraph.rs  pageviews.rs  per_day_wiki_stats.rs
topictrend_cli/: Cargo.toml
topictrend_cli/src/: article_category.rs  articles.rs  catanalysis.rs  categories.rs  category_graph.rs  main.rs  pageviews.rs  per_day_wiki_stats.rs  simulation.rs  test.rs  top_categories.rs
topictrend_core/: Cargo.toml  README.md
topictrend_core/src/: csr_adjacency.rs  direct_map.rs  graphbuilder.rs  lib.rs  pageview_engine.rs  wikigraph.rs
topictrend_taxonomy/: .gitignore  Cargo.toml  build.rs  embedding.proto
topictrend_taxonomy/src/: embedding.rs  lib.rs  main.rs  models.rs  sentence_embedder.rs
topictrend_web/: .gitignore  Cargo.toml  build.rs
topictrend_web/notebooks/: Examples.ipynb
topictrend_web/proto/: topictrend.proto
topictrend_web/src/: category_searcher.rs  grpc_service.rs  handlers.rs  main.rs  models.rs  routes.rs  wiki.rs
topictrend_web/src/services/: mod.rs  pageviews_service.rs
topictrend_web/src/services/composite/: delta_service.rs  mod.rs  pageviews_service.rs
topictrend_web/src/services/core/: article_service.rs  category_service.rs  engine_service.rs  mod.rs  pageview_service.rs  qid_service.rs
topictrend_web/static/: autocomp.js  delta.css  delta.html  delta.js  gen_wiki_list.js  index.html  main.js  search.css  search.html  search.js  styles.css  wikiarticleselector.js  wikicategoryselector.js  wikis.json
topictrend_web/static/components/: wiki-article-pageviews.css  wiki-article-pageviews.js  wiki-category.css  wiki-category.js  wiki-trends.css  wiki-trends.js
