[workspace]
resolver = "3"
members = [
  "topictrend_core",
  "topictrend_cli",
  "topictrend_web"
]

[workspace.dependencies]
parquet = "57"
parquet_derive = "57.0"
dotenv = "0.15"
polars = { version = "0.52", features=["lazy","parquet", "dtype-full", "strings", "timezones"] }
roaring = { version = "0.11", features=[] }
anyhow = "1.0"
ahash = "0.8"
clap = "4.5.53"
chrono = "0.4.42"
rayon = "1.11"
byteorder = "1.5"

