[package]
name = "topictrend_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "topictrend"


[dependencies]
parquet = { workspace = true }
parquet_derive = { workspace = true }
polars = { workspace = true }
roaring = { workspace = true }
anyhow = { workspace = true }
ahash = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
