[package]
name = "topictrend_taxonomy"
version = "0.1.0"
edition = "2024"



[dependencies]
parquet = {workspace=true}
parquet_derive = {workspace=true}
polars =  {workspace=true}
anyhow.workspace = true
ahash = {workspace=true}
clap =  {workspace=true}
chrono =  {workspace=true}
byteorder = {workspace=true}
qdrant-client = "1.16.0"
tonic = "0.14.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
serde_json = "1.0.145"
serde = "1.0.228"
reqwest = "0.12.24"
