[package]
name = "topictrend_taxonomy"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "embed"
path = "src/embedding.rs"


[dependencies]
parquet = { workspace = true }
parquet_derive = { workspace = true }
polars = { workspace = true }
anyhow.workspace = true
ahash = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
qdrant-client = "1.16.0"
tonic = "0.14.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
serde_json = "1.0.145"
serde = "1.0.228"
ort-candle = "0.1.0"
ndarray="0.16.1"
tokenizers = { version = "0.22", default-features = false, features = [ "onig" ] }

[dependencies.ort]
version = "=2.0.0-rc.10"
default-features = false # Disables the `download-binaries` feature since we don't need it
features = [
    "alternative-backend",
    "openvino"
]
