[package]
name = "topictrend_web"
version = "0.1.0"
edition = "2024"


[dependencies]
topictrend_core = { path="../topictrend_core" }
chrono = { workspace = true }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.0", features = ["cors"] }


